# -new_ros2_ws

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
asterassembly_description/: aster_control_center.py  aster_face.html  calibration_alignment_gui.py  candidate_pose_validator.py  direct_go_pose_visualizer.py  ros2_serial_bridge.py  ros2_serial_bridgeold.py  ros_rviz_alignment.json  servo_calibration.json  servo_calibration_gui.py
asterassembly_description/old/: aster_control_center (07022026).py  aster_control_center (Copy).py  aster_control_center (feb1026).py  aster_control_center (marche).py  aster_control_center.py  calibration_control (Copy).ino  gui_accel_publisher.py  initial_pose_publisher.py  lipm_controller.py  lipm_controller01072025.py  lipm_controller020725.py  lipm_controller06062025.py  lipm_controller160625b.py  lipm_controller190625.py  (+11 more)
asterassembly_description/old 0426/: aster_control_center (Copy).py  servo_calibration.json
candidate_poses/: example_candidate_pose.json
config/: display.rviz
launch/: display.launch.py  display.launchold.py  gazebo.launch.py
meshes/: av_bras_droit_1.stl  av_bras_gauche_1.stl  bras_droit_1.stl  bras_gauche_1.stl  clavi_droite_1.stl  clavi_gauche_1.stl  cuisse_droit_1.stl  cuisse_gauche_1.stl  epaule_droite_1.stl  epaule_gauche_1.stl  nuque_1.stl  pied_droit_1.stl  pied_gauche_1.stl  tete_1.stl  tibia_droit_1.stl  tibia_gauche_1.stl
urdf/: asterassembly.gazebo  asterassembly.urdf  asterassembly.xacro  asterassembly_transmissions.xacro  asterassemblycoucher.urdf  materials.xacro
